Changed the font size and padding for Day Length. Fixed the foreground and background colors for sunriseSunset page to be more readable.

--- a/public/sunriseSunset/sunriseSunset.css
+++ b/public/sunriseSunset/sunriseSunset.css
@@ -19,8 +19,12 @@
 }
 
 .sunDisplay.timeChange {
-    background-color: purple;
-    color: #fffff;
+    background-color: black;
+    color: white;
+}
+.sunDisplay.dayLength {
+    font-size: 45px;
+    padding: 8px;
 }
 
 /*homework assignement is:
